package decorator;

public class BigTrouser extends Finery
{
	@Override
	public void Show()
	{
		System.out.print("垮裤 ");
		super.Show();
	}
}