package decorator;

public class TShirts extends Finery
{
	@Override
	public void Show()
	{
		System.out.print("大T恤 ");
		super.Show();
	}
}